fixing spacing on home

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -98,6 +98,8 @@ $sidedrawer-list-icon-size: 20;
 
     .body {
         background-image: linear-gradient(to bottom left, #393ef9, #9c27b0,);
+        padding-bottom: 15%;
+        padding-top: 15%;
     }
 
 //Header font
